--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-post.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-post.scss
@@ -376,10 +376,12 @@
           padding: var( --dm-spacing-secondary );
 
           > img {
-            height: auto;
             width: auto;
-            max-width: 80%;
-            max-height: 100%;
+            height: auto;
+            max-height: 80%;
+            max-width: 70%;
+            object-fit: contain;
+            object-position: center;
           }
         }
         > .dm-post-title-description {
