--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-carousel-posts-list.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-carousel-posts-list.scss
@@ -23,13 +23,13 @@
       > .logo, > svg {
         @include svg-color( var( --dm-color-white ) );
         padding: var(--dm-spacing-secondary);
+        width: auto;
+        max-width: 60%;
+        height: auto;
+        max-height: 60%;
+        object-position: center;
+        object-fit: contain;
 
-        &:nth-child(1) {
-          width: auto;
-          max-width: 70%;
-          height: auto;
-          max-height: 60%;
-        }
       }
       > .thumbnail {
         width: 100%;
