Portfolio Showcase section update style

--- a/themes/dm-theme-01/scss/interface-design/variables.scss
+++ b/themes/dm-theme-01/scss/interface-design/variables.scss
@@ -83,6 +83,7 @@
     /* ---- Fonts ---- */
     --dm-font-family-primary   : "Roboto", sans-serif;
     --dm-font-family-secondary : "Gerth", sans-serif;
+    --dm-font-family-tertiary  : "Space Nation", sans-serif;
     --dm-font-family           : var(--dm-font-family-primary);
 
 
