--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-video-container.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-video-container.scss
@@ -324,6 +324,58 @@ $background-color_4: var( --dm-video-color-primary );
       opacity: 1 !important;
     }
   }
+
+  @media only screen and (max-width: $screen-tablet-small) {
+    &:hover {
+      .timeline {
+        height: 7px;
+      }
+    }
+    &:not(:hover), &:not(:focus), &:not(:focus-within) {
+      .video-controls-container {
+        opacity: 1;
+        display: none;
+
+        > .controls {
+          opacity: 0;
+        }
+      }
+      .timeline {
+        height: 7px;
+        opacity: 0.7;
+
+        > .thumb-indicator {
+          --scale: 1;
+        }
+      }
+    }
+  }
+  @media only screen and (max-width: $screen-phone-medium) {
+    .video-controls-container {
+      .controls {
+        button {
+          @include dm-font-small();
+          --dm-text-small-color: var( --dm-color-white );
+          width: 20px;
+          height: 20px;
+        }
+      }
+    }
+    .duration-container, .speed-btn {
+      @include dm-font-small();
+      --dm-text-small-color: var( --dm-color-white );
+    }
+    .volume-container, .volume-container:hover, .volume-container:focus-within {
+      .volume-slider {
+        width: 60px;
+        transform: rotate(270deg) scale(1.5);
+        bottom: 20px;
+        left: 40px;
+        position: absolute;
+        box-shadow: inset 10px 10px 0px rgba( var( --dm-color-black-rgb ), 0.6 );
+      }
+    }
+  }
 }
 
 body:not([java-script="true"]) {
