--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/elemenet-posts-list-sort-and-search.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/elemenet-posts-list-sort-and-search.scss
@@ -151,6 +151,9 @@
     &:hover {
       background-color: var( --dm-color-secondary );
     }
+    &[aria-expanded="true"] {
+      background-color: var( --dm-color-secondary );
+    }
   }
   @media only screen and (max-width: $screen-tablet-medium) {
     > ul {
