--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-post.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-post.scss
@@ -36,6 +36,21 @@
             max-width: 80%;
             max-height: 80%;
           }
+          > .thumbnail-overlay-for-logo {
+            opacity: 0.2;
+            z-index: -1;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            max-width: 100%;
+            height: 100%;
+            max-height: 100%;
+            object-fit: cover;
+            object-position: center;
+          }
         }
         &.post-thumbnail {
 
