Update Contact Form

--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-catalog-categories.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-catalog-categories.scss
@@ -4,7 +4,8 @@
 .dm-catalog-categories {
   background-color: var( --dm-background-color-secondary );
   background-image: linear-gradient( var( --dm-color-secondary ) 20%,
-                    var( --dm-color-primary ) 200%);
+                    var( --dm-color-primary ) 200%
+  );
   position: relative;
   overflow: hidden;
 
