--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-contact-form.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-contact-form.scss
@@ -100,6 +100,16 @@
           object-position: center;
           margin-right: var( --dm-spacing-primary );
         }
+        > img {
+          width: 100%;
+          height: 60px;
+          object-position: center;
+          object-fit: cover;
+        }
+        &.full-width {
+          width: 100%;
+          max-width: 100%;
+        }
       }
       input {
         z-index: 2;
@@ -132,6 +142,31 @@
         background-color: rgba( var(--dm-color-primary-rgb), 1 );
       }
     }
+    .banner-svg {
+      @include flex-center();
+      @include border-radius( var( --dm-border-radius-primary ) );
+      background-color: var( --dm-color-primary );
+      background-image: linear-gradient(
+              var( --dm-color-secondary ) 20%,
+              var( --dm-color-primary ) 200%
+      );
+      padding: var( --dm-spacing-primary ) var( --dm-spacing-tertiary );
+      gap: calc(var(  --dm-spacing-primary ) / 2);
+
+      > svg {
+        @include flex-center();
+        @include svg-color( var( --dm-color-white ));
+        width: 30px;
+        height: 20px;
+        object-fit: contain;
+        object-position: center;
+      }
+      > label {
+        @include dm-font-big();
+        --dm-text-big-color: var( --dm-color-white );
+        margin-bottom: 0px;
+      }
+    }
     button {
       &[type="button"] {
         border-radius:  var( --dm-border-radius-primary ) !important;
@@ -148,6 +183,26 @@
           > svg {
             margin-right: 0;
           }
+        }
+      }
+      .step {
+        gap: var( --dm-spacing-primary );
+
+        button {
+          @include dm-font-medium();
+        }
+      }
+      input, textarea, .radio {
+        margin-bottom: calc(var( --dm-spacing-primary ) / 2);
+      }
+    }
+  }
+  @media only screen and (max-width: $screen-tablet-medium) {
+    > form {
+      .radio {
+        .checkmark {
+          width: 14px;
+          height: 14px;
         }
       }
     }
