new image at contact page

--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-person-circle-card.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-person-circle-card.scss
@@ -167,7 +167,7 @@ body.theme-dark {
       }
       > div {
         .circle-background {
-          background-color: rgba( var( --dm-color-white-rgb ) , 1);
+          background-color: rgba( var( --dm-color-primary-rgb ) , 1); 
           border: 2px solid var( --dm-color-primary );
         }
       }
