--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-experience-knowledge.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-experience-knowledge.scss
@@ -15,18 +15,53 @@
     .person-image {
       @include flex-center();
       box-sizing: border-box;
+      position: relative;
       width: 35%;
       max-width: 100%;
+      overflow: hidden;
+      border-bottom: 20px solid  var( --dm-color-primary );
+      @include border-radius( var( --dm-border-radius-primary ) );
 
       > img {
+        box-sizing: border-box;
         width: auto;
         max-width: 100%;
         height: 600px;
-        object-position: center;
+        object-position: bottom;
         object-fit: contain;
+        padding: var( --dm-spacing-secondary ) var( --dm-spacing-secondary ) 0 var( --dm-spacing-secondary );
       }
-      > svg {
-        max-width: 100%;
+      > .graphic-element-1 {
+        z-index: -1;
+        content: "";
+        position: absolute;
+        left: 50%;
+        bottom: -5%;
+        width: 80%;
+        height: auto;
+
+        > svg {
+          @include svg-color( var( --dm-color-white) );
+          max-width: 100%;
+          width: 100%;
+          height: auto;
+          opacity: 1;
+        }
+      }
+      &:before {
+        z-index: -1;
+        content: "";
+        position: absolute;
+        width: 100%;
+        padding-bottom: 100%;
+        bottom: 0%;
+        border-radius: 50%;
+        background-color: var( --dm-color-primary );
+        background-image: -webkit-gradient(
+                        linear, left top, left bottom,
+                        color-stop(20%, var( --dm-color-primary )),
+                        color-stop(200%, var( --dm-color-secondary ))
+        );
       }
     }
     .experience-knowledge {
@@ -182,9 +217,16 @@
         gap: var( --dm-spacing-tertiary );
       }
       .person-image {
-        @include border-radius( var( --dm-border-radius-primary ) );
         padding: var( --dm-spacing-primary ) var( --dm-spacing-primary ) 0px var( --dm-spacing-primary );
         background-color: rgba( var( --dm-color-primary-rgb ), 0.5 );
+
+        &:before {
+          width: 30%;
+          padding-bottom: 30%;
+        }
+        > .graphic-element-1 {
+          width: 40%;
+        }
       }
     }
   }
@@ -207,12 +249,41 @@
           }
         }
       }
-
+      .person-image {
+        &:before {
+          width: 50%;
+          padding-bottom: 50%;
+          left: 10%;
+        }
+        > .graphic-element-1 {
+          width: 60%;
+        }
+      }
+    }
+  }
+  @media only screen and (max-width: $screen-phone-large) {
+    > container {
+      .person-image {
+        &:before {
+          width: 70%;
+          padding-bottom: 70%;
+          left: 10%;
+        }
+        > .graphic-element-1 {
+          width: 90%;
+        }
+      }
     }
   }
   @media only screen and (max-width: $screen-phone-small) {
     > container {
       gap: var(--dm-spacing-primary);
+
+      .person-image {
+        > img {
+          height: 200px;
+        }
+      }
     }
   }
 }
