--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-experience-knowledge.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-experience-knowledge.scss
@@ -185,7 +185,16 @@
 
       .text {
         @include flex-column();
+        @include border-radius( var( --dm-border-radius-primary ) );
         gap: var( --dm-spacing-secondary );
+        padding: var( --dm-spacing-secondary );
+        background-color: rgba( var( --dm-color-primary-rgb ), 0.1 );
+        background-image: linear-gradient(
+                        65deg,
+                        rgba(var( --dm-color-secondary-rgb ), 0),
+                        rgba(var( --dm-color-primary-rgb ), 0.1) 40%,
+                        rgba(var( --dm-color-secondary-rgb ), 0.2) 170%
+        );
 
         > p {
           @include dm-font-medium();
@@ -193,10 +202,12 @@
       }
 
       .banner-image {
+        height: 100%;
+
         > img {
           @include border-radius( var( --dm-border-radius-primary ) );
           width: auto;
-          height: 330px;
+          height: 100%;
           object-fit: cover;
           object-position: center;
           max-width: 100%;
@@ -228,7 +239,10 @@
         }
       }
       .experience-knowledge {
-        width: calc(60% - var(--dm-spacing-medium));
+        width: calc(60% - var( --dm-spacing-medium ));
+      }
+      .experience-container {
+        gap: var( --dm-spacing-small );
       }
     }
   }
@@ -269,7 +283,17 @@
       }
       .experience-container {
         @include flex-column();
+        flex-direction: column-reverse;
         gap: var( --dm-spacing-tertiary );
+
+        .banner-image {
+          width: 100%;
+
+          > img {
+            width: 100%;
+            height: 330px;
+          }
+        }
       }
       .person-image {
         padding: var( --dm-spacing-primary ) var( --dm-spacing-primary ) 0px var( --dm-spacing-primary );
@@ -334,6 +358,13 @@
         > .buttons {
           > a {
             width: 100%;
+          }
+        }
+      }
+      .experience-container {
+        .banner-image {
+          > img {
+            height: 200px;
           }
         }
       }
