Work Experience Section Small Adjs

--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-work-experience.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-work-experience.scss
@@ -21,6 +21,7 @@
 
           > h2 {
             display: flex;
+            align-items: center;
 
             > span {
               @include dm-font-heading1();
