Miscellaneous Projects - listing with equal height

--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-posts-list.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-posts-list.scss
@@ -22,6 +22,8 @@
         word-break: break-word;
         position: relative;
         overflow: hidden;
+        box-sizing: border-box;
+        height: 100%; 
 
         > .dm-post-item-image {
             @include flex-center();
