--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-workstation-content.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-workstation-content.scss
@@ -11,17 +11,17 @@
     @include reset-list();
     position: relative;
     overflow: hidden;
-    align-items: center;
     display: grid;
     grid-template-columns: 2fr 1fr;
     gap: var( --dm-spacing-medium );
     padding: var( --dm-spacing-small ) var( --dm-spacing-large );
+    align-items: start;
   }
   .visual {
     @include flex-row();
     @include flex-center();
 
-    > img, svg {
+    img, svg {
       box-sizing: border-box;
       width: auto;
       max-width: 100%;
@@ -30,7 +30,7 @@
       object-fit: contain;
       filter: drop-shadow(-9px 5px 7px rgba(0, 0, 0, 0.2));
     }
-    > svg {
+    svg {
       padding: 20%;
       height: 350px;
     }
@@ -54,6 +54,44 @@
   .summary {
     @include flex-column();
     gap: var( --dm-spacing-secondary );
+  }
+  .slider {
+    @include border-radius( var( --dm-border-radius-primary ));
+    width: 100%;
+    box-sizing: border-box;
+    overflow: hidden;
+    background-color: var( --w-color-primary );
+    background-image: radial-gradient(
+        var(--w-color-primary) 0%,
+        var(--w-color-secondary) 100%
+    );
+
+    > .slider-container {
+      > .slider-element {
+        > img {
+          padding: 10%;
+          width: 100%;
+          height: 450px;
+        }
+        > .number-text {
+          @include dm-font-extra-small();
+          --dm-text-extra-small-color: var(  --w-text-color-on-bg );
+          background-color: var( --w-color-secondary );
+          opacity: 0.8;
+        }
+      }
+    }
+    .prev, .next {
+      opacity: 0.6;
+      color: var( --w-text-color-on-bg );
+      background-color: var( --w-color-secondary );
+
+      &:hover {
+        opacity: 1;
+        color: var( --w-text-color-on-bg );
+        background-color: var( --w-color-secondary );
+      }
+    }
   }
   .enumeration {
     @include reset-list();
@@ -81,15 +119,33 @@
     .product-list {
       grid-template-columns: repeat(3, 3fr);
     }
+    .slider {
+      > .slider-container {
+        > .slider-element {
+          > img {
+            height: 350px;
+          }
+        }
+      }
+    }
   }
   @media only screen and (max-width: $screen-tablet-small ) {
     .product-list {
       grid-template-columns: repeat(2, 2fr);
     }
+    .slider {
+      > .slider-container {
+        > .slider-element {
+          > img {
+            height: 250px;
+          }
+        }
+      }
+    }
   }
   @media only screen and (max-width: $screen-phone-large ) {
     .visual {
-      > img, svg {
+      img, svg {
         height: 240px;
       }
     }
@@ -142,7 +198,7 @@ body, body.theme-light {
       --dm-text-medium-color: var( --dm-color-gray );
     }
     .visual {
-      > svg {
+      svg {
         @include svg-color(var( --w-color-secondary ));
       }
     }
@@ -159,7 +215,7 @@ body.theme-dark {
       --dm-text-medium-color: var( --dm-color-white );
     }
     .visual {
-      > svg {
+      svg {
         @include svg-color(var( --w-color-primary ));
       }
     }
