Small Adjust at Header Scroll
Changing Square Borders at Logo when scrolling

--- a/themes/dm-theme-01/scss/structure-design/header.scss
+++ b/themes/dm-theme-01/scss/structure-design/header.scss
@@ -271,6 +271,7 @@
             .dm-logo {
                 .dm-logo-img {
                     @include fix-size(40px);
+                    border-radius: var( --dm-border-radius-primary );
 
                     [data="dm-logo-front"] {
                         margin-left: -10px;
