Small Adjust at Header Scroll

--- a/themes/dm-theme-01/scss/functions/mixins.scss
+++ b/themes/dm-theme-01/scss/functions/mixins.scss
@@ -81,9 +81,9 @@
 }
 
 @mixin transform ( $vars... ) {
-  -ms-transform     : $var;
-  -webkit-transform : $var;
-  transform         : $var;
+  -ms-transform     : $vars;
+  -webkit-transform : $vars;
+  transform         : $vars;
 }
 
 @mixin transition( $vars... ) {
