--- a/themes/dm-theme-01/scss/structure-design/header.scss
+++ b/themes/dm-theme-01/scss/structure-design/header.scss
@@ -22,6 +22,7 @@
         align-items: center;
         justify-content: space-between;
         gap: var( --dm-spacing-secondary );
+        z-index: 1;
 
         .dm-logo {
             @include flex-row();
@@ -263,10 +264,27 @@
             }
         }
     }
+    &:before {
+        @include box-shadow(0px 2px 7px 4px rgb(8 7 7 / 30%));
+        content: "";
+        background-image: linear-gradient(
+                        rgba(var(--dm-color-secondary-rgb), 0.5) -10%,
+                        rgba(var(--dm-color-primary-rgb), 0.6) 140%
+        );
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        opacity: 0;
+        transition: all 0.2s ease-in-out;
+    }
     &.scrolled {
         min-height: 46px;
         height: 46px;
-        background-color: rgba( var(--dm-color-secondary-rgb), 0.9 );
+        background-color: rgba( var(--dm-color-secondary-rgb), 0.7 );
 
         > section {
             .dm-logo {
@@ -295,6 +313,9 @@
                     top: 12px;
                 }
             }
+        }
+        &:before {
+            opacity: 1;
         }
     }
 
