--- a/themes/dm-theme-01/scss/structure-design/body.scss
+++ b/themes/dm-theme-01/scss/structure-design/body.scss
@@ -97,6 +97,18 @@ svg {
   display: flex;
   flex-direction: column;
   padding-top: var( --header-height );
+
+  &:before {
+    background-color: var( --dm-color-secondary );
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: var( --header-height );
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: unset;
+  }
 }
 
 container, .container {
