--- a/themes/dm-theme-01/scss/structure-design/body.scss
+++ b/themes/dm-theme-01/scss/structure-design/body.scss
@@ -1,6 +1,7 @@
 @import "../functions/mixins.scss";
 
 body {
+    position: relative;
     font-family: var( --dm-font-family-primary );
     background-color: var( --dm-background-color-white );
     padding: 0;
@@ -10,6 +11,30 @@ body {
     justify-content: space-between;
     min-height: 100vh;
     direction: ltr;
+
+  &:after {
+    z-index: -2;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba( var( --dm-color-black-rgb ), 0 );
+    transition: all 0.3s ease-in-out;
+    opacity: 0;
+  }
+  &[data-overlay="true"] {
+    overflow: hidden;
+
+    &:after {
+      z-index: 1;
+      opacity: 1;
+      background-color: rgba( var( --dm-color-black-rgb ), 0.7 );
+    }
+  }
 }
 
 ul,
