--- a/themes/dm-theme-01/scss/structure-design/header.scss
+++ b/themes/dm-theme-01/scss/structure-design/header.scss
@@ -88,7 +88,7 @@
             &.navbar-active {
                 left: 0 !important;
                 z-index: 100;
-                overflow: hidden;
+                overflow-x: hidden;
             }
             > ul {
                 @include reset-list();
