--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-category-card.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-category-card.scss
@@ -75,7 +75,7 @@
     @include flex-column();
     @include flex-center();
     text-align: center;
-    margin-bottom: -108px;
+    margin-bottom: -88px;
     transition: margin-bottom 0.3s;
     z-index: 1;
 
@@ -113,6 +113,7 @@
       }
     }
     > p {
+      box-sizing: border-box;
       width: 100%;
       display: flex;
       flex-direction: column;
@@ -186,12 +187,16 @@
         }
       }
       > div {
+        margin-bottom: -66px;
+        
         > a {
           @include dm-font-medium();
           --dm-text-medium-color: var( --dm-color-white );
           --dm-text-medium-font-weight: 600;
         }
         > p {
+          padding: var( --dm-spacing-primary );
+
           > span {
             @include dm-font-small();
             --dm-text-small-color: var( --dm-color-white );
