--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-slider.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/element-slider.scss
@@ -20,6 +20,7 @@
         vertical-align: middle;
         height: auto;
       }
+
       > .number-text {
         color: var( --dm-color-white );
         font-size: 12px;
@@ -30,6 +31,7 @@
       }
     }
   }
+
   .prev,
   .next {
     cursor: pointer;
@@ -37,17 +39,17 @@
     top: 50%;
     width: auto;
     padding: 4%;
-    margin-top: -12%;
-    color: var( --dm-color-white );
+    color: var(--dm-color-white);
     font-weight: bold;
     font-size: 100%;
     transition: 0.6s ease;
     user-select: none;
-    background-color: rgba(var( --dm-color-black-rgb ), 0.1);
+    background-color: rgba(var(--dm-color-black-rgb), 0.1);
+    transform: translateY(-50%);
 
     &:hover {
-      background-color: rgba(var( --dm-color-black-rgb ), 0.8);
-      color: var( --dm-color-highlight-primary );
+      background-color: rgba(var(--dm-color-black-rgb), 0.8);
+      color: var(--dm-color-highlight-primary);
     }
   }
 
@@ -80,7 +82,6 @@
       background-color: var( --dm-color-primary );
     }
   }
-
 
   @media only screen and (max-width: $screen-phone-medium) {
     .prev,
